--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,12 +6,12 @@ html {
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 
 #root {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
