--- a/css/theme.css
+++ b/css/theme.css
@@ -46,6 +46,7 @@ a {
 button {
     background: #EED369;
     cursor: pointer;
+    color: black !important;
     border: none;
     border-radius: 4px;
     padding: 4%;
